Fix preview on smaller screens (#6)
* Fix preview on smaller screens


* Mark k8s yaml area readonly

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -32,6 +32,12 @@ label {
   width: 45%;
 }
 
+@media screen and (max-width: 600px) {
+  .apply_space {
+    width: 100%;
+  }
+}
+
 #convert {
   margin-top: 20px;
 }
